dataset1235/2025-2/1153765216/users/594844958/executions/2052804200_4142573950.log
== SUBMISSION (2025-09-02 20:40:27)
-- CODE: 
quantidade = int(input())

if quantidade < 6:
  valor = 1.50 * quantidade

else:
  valor = 1.35 * quantidade

print(round(valor, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
9.45
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:40:41)
-- CODE: 
quantidade = int(input())

if quantidade < 6:
  valor = 1.50 * quantidade

else:
  valor = 1.35 * quantidade

print(round(valor, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
9.45
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:41:54)
-- CODE: 
quantidade = int(input())

if quantidade < 6:
  valor = 1.50 * quantidade

elif quantidade >= 12:
  valor = 1.35 * quantidade

print(round(valor, 2))
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:43:44)
-- CODE: 
quantidade = int(input())

if quantidade < 12:
  valor = 1.50 * quantidade

else:
  valor = 1.35 * quantidade

print(round(valor, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:42:05)
-- CODE: 
quantidade = int(input())

if quantidade < 6:
  valor = 1.50 * quantidade

elif quantidade >= 12:
  valor = 1.35 * quantidade

print(round(valor, 2))
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
7
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(valor, 2))
                ^^^^^
NameError: name 'valor' is not defined
-- TEST CASE 2:
---- input:
12
---- correct output:
16.2
---- user output:
16.2
-- TEST CASE 3:
---- input:
25
---- correct output:
33.75
---- user output:
33.75
-- TEST CASE 4:
---- input:
3
---- correct output:
4.5
---- user output:
4.5
-- TEST CASE 5:
---- input:
13
---- correct output:
17.55
---- user output:
17.55
-- TEST CASE 6:
---- input:
21
---- correct output:
28.35
---- user output:
28.35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
